update route to join team

--- a/templates/home.html
+++ b/templates/home.html
@@ -69,7 +69,7 @@
     <p>
       Let's work together. We’re looking for creative, passionate individuals eager to revolutionize the way we live and connect.
     </p>
-    <a href="/careers" class="cta-button">Join Our Team</a>
+    <a href="/mission" class="cta-button">Join Our Team</a>
   </div>
 </section>
 {% endblock %}
